# qa-guru-python-21

./: config.py  pyproject.toml
allure-results/: 09da41d5-dc9f-43ad-81e3-1135022ee792-container.json  0ef60bab-a698-46f2-b632-2ee6b1af8792-container.json  14b2b570-af05-4cca-9e05-cf4f537ad106-attachment.txt  152464c6-f210-41f8-a900-0d66f19c5da9-attachment.html  176b2404-a6e2-4c2c-837a-af397fb0753b-attachment.xml  227cbc30-6a21-42aa-93ce-d5da51194266-container.json  229f4853-4a71-4841-adc4-bbb26f006fdf-container.json  27932502-7250-4e2a-8aa7-0fadf9254ead-result.json  2a42f99e-4d87-4d3f-a09e-02551f4de126-attachment.html  2e1afce9-4e75-45d9-8abe-ff52b8d5eaec-result.json  2eb326c2-9117-4603-b47a-655f5ef7ea05-attachment.txt  317bfded-3369-4279-8a9a-2bd468e25c6b-attachment.txt  33474bc2-d543-4cc4-bda2-56c677d48192-result.json  35ec91d3-3e0b-45b9-86a0-603e52dc43f1-result.json  3bfdeb9b-c245-4f56-be13-3908a829fc90-attachment.txt  41af3fac-f3ae-4241-b563-87c38dfac94c-attachment.txt  4ae9aa81-affd-465f-8ea5-4bee7277f2b3-attachment.txt  4b394a99-d467-45a4-8c03-1609f2c7cc3e-container.json  530912ce-e6cc-4fea-a028-6318daf29078-result.json  53b01c6a-756f-4a71-8a28-5e73a3d6a4fe-attachment.xml  5a9af095-4798-4509-8458-c63df28c35f8-attachment.html  5d368a78-8463-4cb2-bc2e-effcbd1d42f1-attachment.txt  6adb14ee-e560-4eb3-99d0-afed27a79ddf-attachment.html  70af9d67-0429-4c7d-8b53-562605b60fa4-container.json  7c63bf2e-4066-4e02-a0f5-298cd11b5b77-result.json  7d08e0ce-1987-4ffe-96c0-0fcb277ce922-attachment.xml  818155f7-6e8e-4bbd-b80d-9df2a50b7516-attachment.txt  (+14 more)
tests/: conftest.py  (+1 more)
(+2 files in other folders)
